--- a/build.gradle
+++ b/build.gradle
@@ -20,5 +20,14 @@ dependencies {
     implementation('org.mariadb.jdbc:mariadb-java-client')
     implementation('org.springframework.boot:spring-boot-configuration-processor')
     implementation 'org.projectlombok:lombok'
+    // jpa 설정 추가
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-devtools'
+    // swagger2 설정 추가
+    implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
+    implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
+    // Querydsl 추가 시작
+    implementation 'com.querydsl:querydsl-jpa'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
