--- a/build.gradle
+++ b/build.gradle
@@ -29,5 +29,13 @@ dependencies {
     implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
     // Querydsl 추가 시작
     implementation 'com.querydsl:querydsl-jpa'
+    // security 설정
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.security:spring-security-test'
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+    implementation "org.springframework.boot:spring-boot-starter-thymeleaf"
+    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
+    // 로그인 확인용 머스테치
+    implementation 'org.springframework.boot:spring-boot-starter-mustache'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
