--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,8 @@ spring:
       hibernate:
         # show_sql: true
         format_sql: true
+  profiles:
+    include: oauth
 logging:
   level:
     org.hibernate.SQL: debug
