--- a/build.gradle
+++ b/build.gradle
@@ -4,11 +4,10 @@ plugins {
     id 'eclipse'
     id 'java'
 }
-
+ㅈㄷㄹㅈㄷㄹㅁㅁㅁㅁㅁㅁㅁㅁㅁㄴ나는야ㄴㄴㄴ
 group = 'backend.ssr.ddd'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
-
 
 repositories {
     mavenCentral()
