--- a/src/main/resources/application-oauth.yml
+++ b/src/main/resources/application-oauth.yml
@@ -32,4 +32,10 @@ spring:
             authorization-uri: https://nid.naver.com/oauth2.0/authorize
             user-info-uri: https://openapi.naver.com/v1/nid/me
             token-uri: https://nid.naver.com/oauth2.0/token
+  mvc:
+    view:
+      suffix: .html
+  jwt:
+    secret: dewspaperServer
+
 scope: profile,email
