--- a/build.gradle
+++ b/build.gradle
@@ -33,9 +33,10 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.security:spring-security-test'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
-    implementation "org.springframework.boot:spring-boot-starter-thymeleaf"
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
     // 로그인 확인용 머스테치
     implementation 'org.springframework.boot:spring-boot-starter-mustache'
+    // jwt
+    implementation 'io.jsonwebtoken:jjwt:0.9.1'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
