fix : kakao 소셜 로그인 오류 수정 (scope nickname 추가)

--- a/src/main/resources/application-oauth.yml
+++ b/src/main/resources/application-oauth.yml
@@ -15,7 +15,7 @@ spring:
             redirect-uri: http://dddssrbackend-env.ap-northeast-2.elasticbeanstalk.com/login/oauth2/code/kakao
             authorization-grant-type: authorization_code
             client-id: 7f648761f5fad8a48486d6360bed75dd
-            scope: account_email
+            scope: account_email, profile_nickname
             client-name: Kakao
           google:
             client-secret: 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
