--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mariadb://dewspaper.ckvu6z6e9nqy.ap-northeast-2.rds.amazonaws.com:3306/dewspaper
+    url: jdbc:mariadb://dewspaper.ckvu6z6e9nqy.ap-northeast-2.rds.amazonaws.com:3306/dewspaper?serverTimezone=Asia/Seoul
     username: dewspaper
     password: dewspaper123
     driver-class-name: org.mariadb.jdbc.Driver
