--- a/src/main/resources/application-oauth.yml
+++ b/src/main/resources/application-oauth.yml
@@ -4,7 +4,8 @@ spring:
       client:
         registration:
           naver:
-            redirect-uri: '{baseUrl}/{action}/oauth2/code/{registrationId}'
+#            redirect-uri: '{baseUrl}/{action}/oauth2/code/{registrationId}'
+            redirect-uri: 'https://dewspaper.com/login/oauth2/code/naver'
             scope: name,email,nickname
             authorization-grant-type: authorization_code
             client-secret: MahnQmvazl
