--- a/src/main/resources/application-oauth.yml
+++ b/src/main/resources/application-oauth.yml
@@ -5,7 +5,7 @@ spring:
         registration:
           naver:
 #            redirect-uri: '{baseUrl}/{action}/oauth2/code/{registrationId}'
-            redirect-uri: 'http://dddssrbackend-env.ap-northeast-2.elasticbeanstalk.com/login/oauth2/code/naver'
+            redirect-uri: 'http://api.dewspaper.com//login/oauth2/code/naver'
             scope: name,email,nickname
             authorization-grant-type: authorization_code
             client-secret: MahnQmvazl
@@ -13,7 +13,7 @@ spring:
             client-name: Naver
           kakao:
             client-authentication-method: POST
-            redirect-uri: http://dddssrbackend-env.ap-northeast-2.elasticbeanstalk.com/login/oauth2/code/kakao
+            redirect-uri: http://api.dewspaper.com/login/oauth2/code/kakao
             authorization-grant-type: authorization_code
             client-id: 7f648761f5fad8a48486d6360bed75dd
             scope: account_email, profile_nickname
