chore: github action 수동 배포로 수정

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,9 @@
 name: ssr-blog
 
 on:
-  push:
-    branches:
-      [ master, dev ]
+#  push:
+#    branches:
+#      [ master, dev ]
   workflow_dispatch:
 
 jobs:
